Add Database directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ set (_VERSION_MAJOR 0)
 set (_VERSION_MINOR 1)
 project (cppqsolve)
 
-MESSAGE("project SOURCE_DIR is ${cppqsolve_SOURCE_DIR}")
-
 # configure a header file to pass some CMake settings
 # to the source code
 configure_file (
@@ -12,7 +10,10 @@ configure_file (
   "${cppqsolve_BINARY_DIR}/Config.h"
 )
 
+include_directories("${cppqsolve_SOURCE_DIR}/Database")
+add_subdirectory(Database)
 include_directories("${cppqsolve_BINARY_DIR}")
 
 # add executable
 add_executable (cppqsolve main.cpp)
+target_link_libraries(cppqsolve Database)
