Add connection for OrderEngine and StrategyEvaluator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,13 +39,15 @@ configure_file (
 )
 
 include_directories("${qsolve_SOURCE_DIR}")
-include_directories("${qsolve_SOURCE_DIR}/Database")
 include_directories("${qsolve_BINARY_DIR}")
+include_directories("${qsolve_SOURCE_DIR}/Database")
 include_directories("${qsolve_SOURCE_DIR}/OrderFactory")
+include_directories("${qsolve_SOURCE_DIR}/OrderEngine")
 include_directories("${qsolve_SOURCE_DIR}/Portfolio")
 include_directories("${qsolve_SOURCE_DIR}/PythonInterpreter")
 include_directories("${qsolve_SOURCE_DIR}/StrategyEvaluator")
 
+add_subdirectory(OrderEngine)
 add_subdirectory(Database)
 add_subdirectory(OrderFactory)
 add_subdirectory(Portfolio)
@@ -55,6 +57,7 @@ add_subdirectory(StrategyEvaluator)
 # add executable
 add_executable (qsolve main.cpp)
 target_link_libraries(qsolve Database)
+target_link_libraries(qsolve OrderEngine)
 target_link_libraries(qsolve OrderFactory)
 target_link_libraries(qsolve Portfolio)
 target_link_libraries(qsolve PythonInterpreter)
