Switch to Boost.Python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,34 @@
-cmake_minimum_required (VERSION 2.6)
-set (_VERSION_MAJOR 0)
-set (_VERSION_MINOR 1)
-set (_AUTHORS "\"Howard Grimberg, Pho Hale, Seth Polsley, and Peter Lesslie\"")
-set (_PROJECT_NAME "\"QSolve\"")
-project (qsolve)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+SET(_VERSION_MAJOR 0)
+SET(_VERSION_MINOR 1)
+SET(_AUTHORS "\"Howard Grimberg, Pho Hale, Seth Polsley, and Peter Lesslie\"")
+SET(_PROJECT_NAME "\"QSolve\"")
+PROJECT(qsolve)
 
-SET( DEBUG_FLAGS "-fsanitizer=address -fno-omit-frame-pointer" )
-SET( CXX11_FLAGS "--std=c++11")
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}" )
+SET(DEBUG_FLAGS "-fsanitizer=address -fno-omit-frame-pointer")
+SET(CXX11_FLAGS "--std=c++11 -fPIC")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
 
 #find and link to python
 FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
 
 # find and link to boost
-set(Boost_USE_MULTITHREADED ON)
-FIND_PACKAGE( Boost 1.40 COMPONENTS thread program_options date_time REQUIRED )
-INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+SET(Boost_USE_MULTITHREADED ON)
+SET(Boost_USE_STATIC_LIBS OFF)
+SET(Boost_USE_STATIC_RUNTIME OFF)
+FIND_PACKAGE(Boost 1.40 COMPONENTS python thread program_options date_time REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 # configure a header file to pass some CMake settings
 # to the source code
-configure_file (
+CONFIGURE_FILE(
   "${qsolve_SOURCE_DIR}/Config.h.in"
   "${qsolve_BINARY_DIR}/Config.h"
 )
 
 # copy PyDatabase file
-configure_file (
+CONFIGURE_FILE(
   "${qsolve_SOURCE_DIR}/PyDatabase.py"
   "${qsolve_BINARY_DIR}/PyDatabase.py"
   COPY_ONLY
@@ -34,7 +36,7 @@ configure_file (
 
 # copy PyStrategy file
 # just for testing purposes
-configure_file (
+CONFIGURE_FILE(
   "${qsolve_SOURCE_DIR}/PyStrategy.py"
   "${qsolve_BINARY_DIR}/PyStrategy.py"
   COPY_ONLY
@@ -42,37 +44,22 @@ configure_file (
 
 # copy table.csv file
 # for MockDatabase class
-configure_file (
-  "${qsolve_SOURCE_DIR}/Database/table.csv"
+CONFIGURE_FILE(
+  "${qsolve_SOURCE_DIR}/table.csv"
   "${qsolve_BINARY_DIR}/table.csv"
   COPY_ONLY
 )
 
-include_directories("${qsolve_SOURCE_DIR}")
-include_directories("${qsolve_BINARY_DIR}")
-include_directories("${qsolve_SOURCE_DIR}/Database")
-include_directories("${qsolve_SOURCE_DIR}/OrderFactory")
-include_directories("${qsolve_SOURCE_DIR}/OrderEngine")
-include_directories("${qsolve_SOURCE_DIR}/Portfolio")
-include_directories("${qsolve_SOURCE_DIR}/PythonInterpreter")
-include_directories("${qsolve_SOURCE_DIR}/StrategyEvaluator")
+INCLUDE_DIRECTORIES("${qsolve_SOURCE_DIR}")
+INCLUDE_DIRECTORIES("${qsolve_BINARY_DIR}")
 
-add_subdirectory(OrderEngine)
-add_subdirectory(Database)
-add_subdirectory(OrderFactory)
-add_subdirectory(Portfolio)
-add_subdirectory(PythonInterpreter)
-add_subdirectory(StrategyEvaluator)
+ADD_LIBRARY( Context Context.cpp OrderFactory.cpp )
 
 # add executable
-add_executable (qsolve main.cpp)
-target_link_libraries(qsolve Database)
-target_link_libraries(qsolve OrderEngine)
-target_link_libraries(qsolve OrderFactory)
-target_link_libraries(qsolve Portfolio)
-target_link_libraries(qsolve PythonInterpreter)
-target_link_libraries(qsolve StrategyEvaluator)
-target_link_libraries(qsolve boost_program_options)
-target_link_libraries(qsolve ${PYTHON_LIBRARIES})
-target_link_libraries(qsolve ${Boost_LIBRARIES})
+#PYTHON_ADD_MODULE(qsolve_ext PyContext.cpp)
+#TARGET_LINK_LIBRARIES(qsolve_ext Context)
+#TARGET_LINK_LIBRARIES(qsolve_ext ${Boost_Libraries})
 
+ADD_EXECUTABLE(qsolve main.cpp)
+TARGET_LINK_LIBRARIES(qsolve Context)
+TARGET_LINK_LIBRARIES(qsolve boost_program_options ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
